--- a/Sat.Recruitment.Dom/Sat.Recruitment.Dom.csproj
+++ b/Sat.Recruitment.Dom/Sat.Recruitment.Dom.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <AdditionalFiles Include="..\..\stylecop.json" Link="stylecop.json" />
+    <AdditionalFiles Include="..\stylecop.json" Link="stylecop.json" />
   </ItemGroup>
 
   <ItemGroup>
@@ -13,10 +13,6 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\Sat.Recruitment.Dom\Sat.Recruitment.Dom\Sat.Recruitment.Dom.csproj" />
   </ItemGroup>
 
 </Project>
