--- a/Sat.Recruitment.Api/Sat.Recruitment.Api.csproj
+++ b/Sat.Recruitment.Api/Sat.Recruitment.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Sat.Recruitment.Pre\Sat.Recruitment.Pre\Sat.Recruitment.Pre.csproj" />
+    <ProjectReference Include="..\Sat.Recruitment.Pre\Sat.Recruitment.Pre.csproj" />
   </ItemGroup>
 
   <ItemGroup>
