--- a/Sat.Recruitment.Dom/Sat.Recruitment.Dom.csproj
+++ b/Sat.Recruitment.Dom/Sat.Recruitment.Dom.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Ensure.That" Version="10.1.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
