--- a/Sat.Recruitment.Pre/Sat.Recruitment.Pre.csproj
+++ b/Sat.Recruitment.Pre/Sat.Recruitment.Pre.csproj
@@ -17,6 +17,20 @@
   </ItemGroup>
 
   <ItemGroup>
+
+    <!-- Make assembly visible to test assembly -->
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>$(AssemblyName).Test</_Parameter1>
+    </AssemblyAttribute>
+
+    <!-- Make assembly usable for Moq, so Moq is able to instanciate objects of 'internal' classes -->
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+      <_Parameter1>DynamicProxyGenAssembly2</_Parameter1>
+    </AssemblyAttribute>
+
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Sat.Recruitment.Dom\Sat.Recruitment.Dom.csproj" />
   </ItemGroup>
 
