add: finished UT

--- a/Sat.Recruitment.Dom.Test/Sat.Recruitment.Dom.Test.csproj
+++ b/Sat.Recruitment.Dom.Test/Sat.Recruitment.Dom.Test.csproj
@@ -31,4 +31,10 @@
     <ProjectReference Include="..\Sat.Recruitment.Dom\Sat.Recruitment.Dom.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Files\Users.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
